cd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-web-svc
  namespace: blog
spec:
  selector:
    app: blog-web
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
