cd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-web-ing
  namespace: blog
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - blog.workly.info
      secretName: blog-newest
  rules:
    - host: blog.workly.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog-web-svc
                port:
                  number: 80
